@@ -5,7 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
-    <item android:id="@+id/menu_clear_all" android:title="Clear All"></item>
-    <item android:id="@+id/menu_clear_selected" android:title="Clear Selected"></item>
+    <item android:id="@+id/menu_clear_all" android:title="@string/menu_show_clear_all"></item>
+    <item android:id="@+id/menu_clear_selected" android:title="@string/menu_show_clear_selected"></item>
+    <item android:id="@+id/menu_show_new" android:checkable="true" android:checked="true" android:title="@string/menu_show_new"></item>
+	<item android:id="@+id/menu_show_updated" android:checkable="true" android:checked="true" android:title="@string/menu_show_updated"></item>
+    <item android:id="@+id/menu_show_deleted" android:checkable="true" android:checked="true" android:title="@string/menu_show_deleted"></item>
 
 </menu>
